Header HTML & Style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 
+<header>
+  <h1 class="tea-cozy-logo">
+    Tea Cozy
+  </h1>
+  <nav class="head-nav">
+    <a href="#">Mission</a>
+    <a href="#">Featured Tea</a>
+    <a href="#">Locations</a>
+  </nav>
+</header>
 
 </body>
 </html>
