Main Content Work

--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
 <body>
 
 <header>
-  <h1 class="tea-cozy-logo">
-    Tea Cozy
-  </h1>
+  <img class="tea-cozy-logo"
+  src="./resources/images/img-tea-cozy-logo.png"
+  alt="Good looking Cursive Logo Tea Cozy" />
   <nav class="head-nav">
     <a href="#">Mission</a>
     <a href="#">Featured Tea</a>
     <a href="#">Locations</a>
   </nav>
 </header>
+
+<main>
+  <div class="our-mission">
+    <h2>
+      Our Mission
+    </h2>
+    <h4>
+      Handpicked, Artisanally Curated, Free Range,
+      Sustainable, Small Batch, Fair Trade,
+      Organic Tea
+    </h4>
+  </div>
+</main>
 
 </body>
 </html>
