--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-
+  <!-- Header / Navigation Fixed -->
 <header>
   <img class="tea-cozy-logo"
   src="./resources/images/img-tea-cozy-logo.png"
@@ -16,7 +16,7 @@
     <a href="#">Locations</a>
   </nav>
 </header>
-
+  <!-- Main Content Begins w/ Our Mission -->
 <main>
   <div class="our-mission">
     <h2>
@@ -29,6 +29,69 @@
     </h4>
   </div>
 </main>
+  <!-- Teas of the Month Gallery Display -->
+<div class="tea-of-month">
+  <h2>
+    Tea of the Month
+  </h2>
+  <h4>
+    What's Steeping at The Tea Cozy?
+  </h4>
+</div>
+    <!-- First Row -->
+<div class="tea-of-month-cont">
+  <div class="berry-blitz"></div>
+  <div class="spiced-rum"></div>
+  <div class="seasonal-donuts"></div>
+</div>
+<div class="tea-of-month-cont">
+  <h4>
+    Fall Berry Blitz Tea
+  </h4>
+  <h4>
+    Spiced Rum Tea
+  </h4>
+  <h4>
+    Seasonal Donuts
+  </h4>
+</div>
+    <!-- Second Row -->
+<div class="tea-of-month-cont">
+  <div class="myrtle-ave-tea"></div>
+  <div class="bedford-bizarre-tea"></div>
+</div>
+<div class="tea-of-month-cont">
+  <h4>
+    Myrtle Ave Tea
+  </h4>
+  <h4>
+    Bedford Bizaree Tea
+  </h4>
+</div>
+  <!-- Locations -->
+<div class="locations-div">
+  <h2>Locations</h2>
+  <div class="locations-cont">
+    <div class="locations-box">
+      <h3>Downtown</h3>
+      <h4>384 West 4th St</h4>
+      <h4>Suite 108</h4>
+      <h4>Portland, Maine</h4>
+    </div>
+    <div class="locations-box">
+      <h3>East Bayside</h3>
+      <h4>3422 Phisherman's Avenue</h4>
+      <h4>(Northwest Corner)</h4>
+      <h4>Portland, Maine</h4>
+    </div>
+    <div class="locations-box opafull">
+      <h3>Oakdale</h3>
+      <h4>515 Crescent Avenue</h4>
+      <h4>Second Floor</h4>
+      <h4>Portland, Maine</h4>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
