--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tea Cozy</title>
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
+  <link href="./resources/images/fav.ico" rel="shortcut icon" />
 </head>
 <body>
   <!-- Header / Navigation Fixed -->
@@ -92,6 +93,17 @@
     </div>
   </div>
 </div>
+  <!--Footer Info/Copyright -->
+<footer>
+  <div class="info">
+    <h2>The Tea Cozy</h2>
+    <h5>contact@teacozy.net</h5>
+    <h5>412-224-1124</h5>
+  </div>
+  <div class="copy">
+    <p>&copy; The Tea Cozy 2018</p>
+  </div>
+</footer>
 
 </body>
 </html>
