--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   src="./resources/images/img-tea-cozy-logo.png"
   alt="Good looking Cursive Logo Tea Cozy" />
   <nav class="head-nav">
-    <a href="#">Mission</a>
-    <a href="#">Featured Tea</a>
-    <a href="#">Locations</a>
+    <a href="#mission">Mission</a>
+    <a href="#featured-tea">Featured Tea</a>
+    <a href="#locations">Locations</a>
   </nav>
 </header>
   <!-- Main Content Begins w/ Our Mission -->
 <main>
-  <div class="our-mission">
+  <div id="mission" class="our-mission">
     <h2>
       Our Mission
     </h2>
@@ -31,7 +31,7 @@
   </div>
 </main>
   <!-- Teas of the Month Gallery Display -->
-<div class="tea-of-month">
+<div id="featured-tea" class="tea-of-month">
   <h2>
     Tea of the Month
   </h2>
@@ -70,7 +70,7 @@
   </h4>
 </div>
   <!-- Locations -->
-<div class="locations-div">
+<div id="locations" class="locations-div">
   <h2>Locations</h2>
   <div class="locations-cont">
     <div class="locations-box">
